<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/layout_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.HomeActivity">

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/list_restaurants"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            android:paddingBottom="88dp"
            tools:listitem="@layout/item_restaurant" />

</androidx.constraintlayout.widget.ConstraintLayout>
